Fixed files/docs/notes card list on mobile

--- a/shared/js/cyph/components/account-files/account-files.component.scss
+++ b/shared/js/cyph/components/account-files/account-files.component.scss
@@ -3,3 +3,15 @@
 .file-upload {
 	height: 10em;
 }
+
+.mobile{
+	mat-card {
+		width: 80vw;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	::ng-deep .mat-card-header-text {
+		word-break: break-word;
+	}
+}
